// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListBoxSelection should render 1`] = `
<ListBoxSelection
  clearSelection={[MockFunction]}
  translateWithId={
    [MockFunction] {
      "calls": Array [
        Array [
          "clear.selection",
        ],
        Array [
          "clear.all",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": "translation",
        },
        Object {
          "type": "return",
          "value": "translation",
        },
      ],
    }
  }
>
  <div
    className="bx--tag--filter bx--list-box__selection"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex="0"
    title="translation"
  >
    <Close16
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      viewBox="0 0 16 16"
      width={16}
      xmlns="http://www.w3.org/2000/svg"
    >
      <svg
        aria-hidden={true}
        focusable="false"
        height={16}
        preserveAspectRatio="xMidYMid meet"
        role="img"
        style={
          Object {
            "willChange": "transform",
          }
        }
        viewBox="0 0 16 16"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 4.7l-.7-.7L8 7.3 4.7 4l-.7.7L7.3 8 4 11.3l.7.7L8 8.7l3.3 3.3.7-.7L8.7 8z"
        />
      </svg>
    </Close16>
  </div>
</ListBoxSelection>
`;

exports[`ListBoxSelection should render 2`] = `
<ListBoxSelection
  clearSelection={[MockFunction]}
  selectionCount={3}
  translateWithId={
    [MockFunction] {
      "calls": Array [
        Array [
          "clear.selection",
        ],
        Array [
          "clear.all",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": "translation",
        },
        Object {
          "type": "return",
          "value": "translation",
        },
      ],
    }
  }
>
  <div
    className="bx--tag--filter bx--list-box__selection bx--list-box__selection--multi"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex="0"
    title="translation"
  >
    3
    <Close16
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      viewBox="0 0 16 16"
      width={16}
      xmlns="http://www.w3.org/2000/svg"
    >
      <svg
        aria-hidden={true}
        focusable="false"
        height={16}
        preserveAspectRatio="xMidYMid meet"
        role="img"
        style={
          Object {
            "willChange": "transform",
          }
        }
        viewBox="0 0 16 16"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 4.7l-.7-.7L8 7.3 4.7 4l-.7.7L7.3 8 4 11.3l.7.7L8 8.7l3.3 3.3.7-.7L8.7 8z"
        />
      </svg>
    </Close16>
  </div>
</ListBoxSelection>
`;
